# sand

./: pyproject.toml
.github/workflows/: ci.yml
extensions/sand_drepr/: pyproject.toml
extensions/sand_drepr/sand_drepr/: main.py  transformation.py
extensions/sand_drepr/sand_drepr/raw_transformations/: uri.py
sand/: container.py
sand/controllers/: settings.py  table.py
sand/extension_interface/: export.py
sand/helpers/: service_provider.py
sand/models/: ontology.py
www/: package.json
www/src/: routes.tsx
www/src/models/: AssistantService.ts
www/src/models/settings/: ApplicationConfig.ts  index.ts
www/src/pages/project/forms/upload/: RawTableComponent.tsx
www/src/pages/table/: MenuBar.tsx  TablePage.tsx
www/src/pages/table/table/: styles.ts
